--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,12 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.33",
+        "laravel/reverb": "^1.5",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.2",
-        "livewire/volt": "^1.7"
+        "livewire/volt": "^1.7",
+        "predis/predis": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
