--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^2.1.6",
         "laravel-vite-plugin": "^1.0",
+        "socket.io-client": "^4.8.1",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
     },
